Website: add Resell V2 User resource
Add website documentation for the Resell V2 User resource.

--- a/website/selvpc.erb
+++ b/website/selvpc.erb
@@ -25,6 +25,9 @@
             <li<%= sidebar_current("docs-selvpc-resource-resell-subnet-v2") %>>
               <a href="/docs/providers/selvpc/r/resell_subnet_v2.html">selvpc_resell_subnet_v2</a>
             </li>
+            <li<%= sidebar_current("docs-selvpc-resource-resell-user-v2") %>>
+              <a href="/docs/providers/selvpc/r/resell_user_v2.html">selvpc_resell_user_v2</a>
+            </li>
           </ul>
         </li>
 
