Website: add Resell V2 Role resource
Add website documentation for the Resell V2 Role resource.

--- a/website/selvpc.erb
+++ b/website/selvpc.erb
@@ -22,6 +22,9 @@
             <li<%= sidebar_current("docs-selvpc-resource-resell-project-v2") %>>
               <a href="/docs/providers/selvpc/r/resell_project_v2.html">selvpc_resell_project_v2</a>
             </li>
+            <li<%= sidebar_current("docs-selvpc-resource-resell-role-v2") %>>
+              <a href="/docs/providers/selvpc/r/resell_role_v2.html">selvpc_resell_role_v2</a>
+            </li>
             <li<%= sidebar_current("docs-selvpc-resource-resell-subnet-v2") %>>
               <a href="/docs/providers/selvpc/r/resell_subnet_v2.html">selvpc_resell_subnet_v2</a>
             </li>
