Resell V2 Keypair: add website documentation
Add website documentation for the "selvpc_resell_keypair_v2" resource.

--- a/website/selvpc.erb
+++ b/website/selvpc.erb
@@ -16,6 +16,9 @@
             <li<%= sidebar_current("docs-selvpc-resource-resell-floatingip-v2") %>>
               <a href="/docs/providers/selvpc/r/resell_floatingip_v2.html">selvpc_resell_floatingip_v2</a>
             </li>
+            <li<%= sidebar_current("docs-selvpc-resource-resell-keypair-v2") %>>
+              <a href="/docs/providers/selvpc/r/resell_keypair_v2.html">selvpc_resell_keypair_v2</a>
+            </li>
             <li<%= sidebar_current("docs-selvpc-resource-resell-license-v2") %>>
               <a href="/docs/providers/selvpc/r/resell_license_v2.html">selvpc_resell_license_v2</a>
             </li>
