VRRP Subnet: add website documentation
Add "resell_vrrp_subnet_v2" website page.

--- a/website/selvpc.erb
+++ b/website/selvpc.erb
@@ -37,6 +37,9 @@
             <li<%= sidebar_current("docs-selvpc-resource-resell-user-v2") %>>
               <a href="/docs/providers/selvpc/r/resell_user_v2.html">selvpc_resell_user_v2</a>
             </li>
+            <li<%= sidebar_current("docs-selvpc-resource-resell-vrrp-subnet-v2") %>>
+              <a href="/docs/providers/selvpc/r/resell_vrrp_subnet_v2.html">selvpc_resell_vrrp_subnet_v2</a>
+            </li>
           </ul>
         </li>
 
