Cross-region subnet: add website documentation
Add "resell_crossregion_subnet_v2" website page.

--- a/website/selvpc.erb
+++ b/website/selvpc.erb
@@ -13,6 +13,9 @@
         <li<%= sidebar_current("docs-selvpc-resource-resell") %>>
           <a href="#">Resell Resources</a>
           <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-selvpc-resource-resell-crossregion-subnet-v2") %>>
+              <a href="/docs/providers/selvpc/r/resell_crossregion_subnet_v2.html">selvpc_resell_crossregion_subnet_v2</a>
+            </li>
             <li<%= sidebar_current("docs-selvpc-resource-resell-floatingip-v2") %>>
               <a href="/docs/providers/selvpc/r/resell_floatingip_v2.html">selvpc_resell_floatingip_v2</a>
             </li>
