Provider renaming: cleanup docs
Cleanup website documentation after provider renaming.

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -13,6 +13,9 @@
         <li<%= sidebar_current("docs-selectel-resource-vpc") %>>
           <a href="#">VPC Resources</a>
           <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-selectel-resource-vpc-crossregion-subnet-v2") %>>
+              <a href="/docs/providers/selectel/r/vpc_crossregion_subnet_v2.html">selectel_vpc_crossregion_subnet_v2</a>
+            </li>
             <li<%= sidebar_current("docs-selectel-resource-vpc-floatingip-v2") %>>
               <a href="/docs/providers/selectel/r/vpc_floatingip_v2.html">selectel_vpc_floatingip_v2</a>
             </li>
