MKS V1: add nodegroup resource website page
Add "mks_nodegroup_v1" website documentation.

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -43,6 +43,18 @@
           </ul>
         </li>
 
+        <li<%= sidebar_current("docs-selectel-resource-mks") %>>
+          <a href="#">MKS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-selectel-resource-mks-cluster-v1") %>>
+              <a href="/docs/providers/selectel/r/mks_cluster_v1.html">selectel_mks_cluster_V1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-mks-nodegroup-v1") %>>
+              <a href="/docs/providers/selectel/r/mks_nodegroup_v1.html">selectel_mks_nodegroup_V1</a>
+            </li>
+          </ul>
+        </li>
+
       </ul>
     </div>
   <% end %>
