Domains V1: extend docs and example usage

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -55,6 +55,15 @@
           </ul>
         </li>
 
+         <li<%= sidebar_current("docs-selectel-resource-domains") %>>
+           <a href="#">Domains Resources</a>
+           <ul class="nav nav-visible">
+             <li<%= sidebar_current("docs-selectel-resource-domains-domain-v1") %>>
+               <a href="/docs/providers/selectel/r/domains_domain_v1.html">selectel_domains_domain_v1</a>
+             </li>
+           </ul>
+         </li>
+
       </ul>
     </div>
   <% end %>
