Domains V1: add record resource

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -61,6 +61,9 @@
              <li<%= sidebar_current("docs-selectel-resource-domains-domain-v1") %>>
                <a href="/docs/providers/selectel/r/domains_domain_v1.html">selectel_domains_domain_v1</a>
              </li>
+              <li<%= sidebar_current("docs-selectel-resource-domains-record-v1") %>>
+                <a href="/docs/providers/selectel/r/domains_record_v1.html">selectel_domains_record_v1</a>
+              </li>
            </ul>
          </li>
 
