DBaaS V1: add datastore resource

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -76,6 +76,15 @@
            </ul>
          </li>
 
+         <li<%= sidebar_current("docs-selectel-resource-dbaas") %>>
+          <a href="#">DBaaS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-datastore-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_datastore_v1.html">selectel_dbaas_datastore_v1</a>
+            </li>
+          </ul>
+        </li>
+
       </ul>
     </div>
   <% end %>
