DBaaS V1: add datastore resource (#151)
* DBaaS V1: add datastore resource

* DBaaS V1: add datastore type data source

* DBaaS V1: change datastore type data source name

* DBaaS V1: fix doc sidebar name for datastore type data source

* DBaaS V1: remove extra cognitive complexity for datastore update method

* DBaaS V1: add error check for checksum method

* DBaaS V1: fix datastore's flavor check

* DBaaS V1: fix small issues

- Fix indentation for documentation
- Use one var for datastore's update params
- Check error if flavor cannot be transformed into set

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -16,6 +16,9 @@
             <li<%= sidebar_current("docs-selectel-datasource-domains-domain-v1") %>>
               <a href="/docs/providers/selectel/d/domains_domain_v1.html">selectel_domains_domain_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-datasource-dbaas-datastore-type-v1") %>>
+              <a href="/docs/providers/selectel/d/dbaas_datastore_type_v1.html">selectel_dbaas_datastore_type_v1</a>
+            </li>
           </ul>
         </li>
 
@@ -64,17 +67,26 @@
           </ul>
         </li>
 
-         <li<%= sidebar_current("docs-selectel-resource-domains") %>>
-           <a href="#">Domains Resources</a>
-           <ul class="nav nav-visible">
-             <li<%= sidebar_current("docs-selectel-resource-domains-domain-v1") %>>
-               <a href="/docs/providers/selectel/r/domains_domain_v1.html">selectel_domains_domain_v1</a>
-             </li>
-              <li<%= sidebar_current("docs-selectel-resource-domains-record-v1") %>>
-                <a href="/docs/providers/selectel/r/domains_record_v1.html">selectel_domains_record_v1</a>
-              </li>
-           </ul>
-         </li>
+        <li<%= sidebar_current("docs-selectel-resource-domains") %>>
+          <a href="#">Domains Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-selectel-resource-domains-domain-v1") %>>
+              <a href="/docs/providers/selectel/r/domains_domain_v1.html">selectel_domains_domain_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-domains-record-v1") %>>
+              <a href="/docs/providers/selectel/r/domains_record_v1.html">selectel_domains_record_v1</a>
+            </li>
+          </ul>
+        </li>
+
+        <li<%= sidebar_current("docs-selectel-resource-dbaas") %>>
+          <a href="#">DBaaS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-datastore-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_datastore_v1.html">selectel_dbaas_datastore_v1</a>
+            </li>
+          </ul>
+        </li>
 
       </ul>
     </div>
