DBaaS V1: add available extension data source documentation link

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -19,6 +19,9 @@
             <li<%= sidebar_current("docs-selectel-datasource-dbaas-datastore-type-v1") %>>
               <a href="/docs/providers/selectel/d/dbaas_datastore_type_v1.html">selectel_dbaas_datastore_type_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-datasource-dbaas-available-extension-v1") %>>
+              <a href="/docs/providers/selectel/d/dbaas_available_extension_v1.html">selectel_dbaas_available_extension_v1</a>
+            </li>
           </ul>
         </li>
 
