DBaaS V1: add user resource
- Implement "selectel_dbaas_user_v1" resource with acceptance test.
- Set flavor to datastore only if flavor_id is empty

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -88,6 +88,9 @@
             <li<%= sidebar_current("docs-selectel-resource-dbaas-datastore-v1") %>>
               <a href="/docs/providers/selectel/r/dbaas_datastore_v1.html">selectel_dbaas_datastore_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-user-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_user_v1.html">selectel_dbaas_user_v1</a>
+            </li>
           </ul>
         </li>
 
