DBaaS V1: fix small issues
- Add resource links to the documentation.
- Fix log message for resource creation.

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -85,8 +85,17 @@
         <li<%= sidebar_current("docs-selectel-resource-dbaas") %>>
           <a href="#">DBaaS Resources</a>
           <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-database-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_database_v1.html">selectel_dbaas_database_v1</a>
+            </li>
             <li<%= sidebar_current("docs-selectel-resource-dbaas-datastore-v1") %>>
               <a href="/docs/providers/selectel/r/dbaas_datastore_v1.html">selectel_dbaas_datastore_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-extension-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_extension_v1.html">selectel_dbaas_extension_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-grant-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_grant_v1.html">selectel_dbaas_grant_v1</a>
             </li>
             <li<%= sidebar_current("docs-selectel-resource-dbaas-user-v1") %>>
               <a href="/docs/providers/selectel/r/dbaas_user_v1.html">selectel_dbaas_user_v1</a>
