--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -22,6 +22,9 @@
             <li<%= sidebar_current("docs-selectel-datasource-dbaas-available-extension-v1") %>>
               <a href="/docs/providers/selectel/d/dbaas_available_extension_v1.html">selectel_dbaas_available_extension_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-datasource-dbaas-configuration_parameter-v1") %>>
+              <a href="/docs/providers/selectel/d/dbaas_configuration_parameter_v1.html">selectel_dbaas_configuration_parameter_v1</a>
+            </li>
           </ul>
         </li>
 
