Add prometheus metric token resources

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -22,8 +22,11 @@
             <li<%= sidebar_current("docs-selectel-datasource-dbaas-available-extension-v1") %>>
               <a href="/docs/providers/selectel/d/dbaas_available_extension_v1.html">selectel_dbaas_available_extension_v1</a>
             </li>
-            <li<%= sidebar_current("docs-selectel-datasource-dbaas-configuration_parameter-v1") %>>
+            <li<%= sidebar_current("docs-selectel-datasource-dbaas-configuration-parameter-v1") %>>
               <a href="/docs/providers/selectel/d/dbaas_configuration_parameter_v1.html">selectel_dbaas_configuration_parameter_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-datasource-dbaas-prometheus-metric-token-v1") %>>
+              <a href="/docs/providers/selectel/d/dbaas_prometheus_metric_token_v1.html">selectel_dbaas_prometheus_metric_token_v1</a>
             </li>
           </ul>
         </li>
@@ -102,6 +105,9 @@
             </li>
             <li<%= sidebar_current("docs-selectel-resource-dbaas-user-v1") %>>
               <a href="/docs/providers/selectel/r/dbaas_user_v1.html">selectel_dbaas_user_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-prometheus-metric-token-v1") %>>
+              <a href="/docs/providers/selectel/r/selectel_dbaas_prometheus_metric_token_v1.html">selectel_dbaas_prometheus_metric_token_v1</a>
             </li>
           </ul>
         </li>
