Refactor mks cluster tests with kube options;
Rename kube_version_minor -> kube_version;

Update website docs;

Revert back go test flag.

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -28,6 +28,12 @@
             <li<%= sidebar_current("docs-selectel-datasource-dbaas-prometheus-metric-token-v1") %>>
               <a href="/docs/providers/selectel/d/dbaas_prometheus_metric_token_v1.html">selectel_dbaas_prometheus_metric_token_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-datasource-mks-feature-gates-v1") %>>
+              <a href="/docs/providers/selectel/d/mks_feature_gates_v1.html">selectel_mks_feature_gates_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-datasource-mks-admission-controllers-v1") %>>
+              <a href="/docs/providers/selectel/d/mks_admission_controllers_v1.html">selectel_mks_admission_controllers_v1</a>
+            </li>
           </ul>
         </li>
 
