--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -34,6 +34,9 @@
             <li<%= sidebar_current("docs-selectel-datasource-mks-admission-controllers-v1") %>>
               <a href="/docs/providers/selectel/d/mks_admission_controllers_v1.html">selectel_mks_admission_controllers_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-datasource-mks-kubeconfig-v1") %>>
+              <a href="/docs/providers/selectel/d/mks_kubeconfig_v1.html">selectel_mks_kubeconfig_v1</a>
+            </li>
           </ul>
         </li>
 
