MKS V1: add kube versions data source
Implement "selectel_mks_kube_versions_v1" data source with acceptance test.

Add helper functions in "mks.go" with needed tests.

Add "mks_kube_versions_v1" website page.

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -37,6 +37,9 @@
             <li<%= sidebar_current("docs-selectel-datasource-mks-kubeconfig-v1") %>>
               <a href="/docs/providers/selectel/d/mks_kubeconfig_v1.html">selectel_mks_kubeconfig_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-datasource-mks-kube-versions-v1") %>>
+              <a href="/docs/providers/selectel/d/mks_kube_versions_v1.html">selectel_mks_kube_versions_v1</a>
+            </li>
           </ul>
         </li>
 
