--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -103,11 +103,29 @@
             <li<%= sidebar_current("docs-selectel-resource-dbaas-database-v1") %>>
               <a href="/docs/providers/selectel/r/dbaas_database_v1.html">selectel_dbaas_database_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-mysql-database-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_mysql_database_v1.html">selectel_dbaas_database_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-postgresql-database-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_postgresql_database_v1.html">selectel_dbaas_database_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-mysql-datastore-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_mysql_datastore_v1.html">selectel_dbaas_datastore_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-postgresql-datastore-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_postgresql_datastore_v1.html">selectel_dbaas_datastore_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-redis-datastore-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_redis_datastore_v1.html">selectel_dbaas_datastore_v1</a>
+            </li>
             <li<%= sidebar_current("docs-selectel-resource-dbaas-datastore-v1") %>>
               <a href="/docs/providers/selectel/r/dbaas_datastore_v1.html">selectel_dbaas_datastore_v1</a>
             </li>
             <li<%= sidebar_current("docs-selectel-resource-dbaas-extension-v1") %>>
               <a href="/docs/providers/selectel/r/dbaas_extension_v1.html">selectel_dbaas_extension_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-postgresql-extension-v1") %>>
+              <a href="/docs/providers/selectel/r/dbaas_postgresql_extension_v1.html">selectel_dbaas_extension_v1</a>
             </li>
             <li<%= sidebar_current("docs-selectel-resource-dbaas-grant-v1") %>>
               <a href="/docs/providers/selectel/r/dbaas_grant_v1.html">selectel_dbaas_grant_v1</a>
