Added logical replication slots resources for PostgreSQL

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -136,6 +136,9 @@
             <li<%= sidebar_current("docs-selectel-resource-dbaas-prometheus-metric-token-v1") %>>
               <a href="/docs/providers/selectel/r/selectel_dbaas_prometheus_metric_token_v1.html">selectel_dbaas_prometheus_metric_token_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-resource-dbaas-logical-replication-slot-v1") %>>
+              <a href="/docs/providers/selectel/r/selectel_dbaas_logical-replication-slot_v1.html">selectel_dbaas_logical_replication_slot_v1</a>
+            </li>
           </ul>
         </li>
 
