CRaaS V1: add registry resource
Implement `selectel_craas_registry_v1` resource with acceptance tests.

Add helper functions in `craas.go`.

Update the documentation.

Update .gitignore file.

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -142,6 +142,15 @@
           </ul>
         </li>
 
+        <li<%= sidebar_current("docs-selectel-resource-craas") %>>
+          <a href="#">CRaaS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-selectel-resource-craas-registry-v1") %>>
+              <a href="/docs/providers/selectel/r/craas_registry_v1.html">selectel_craas_registry_v1</a>
+            </li>
+          </ul>
+        </li>
+
       </ul>
     </div>
   <% end %>
