CRaaS V1: add token resource
Implement `selectel_craas_token_v1` resource with acceptance test.

Update the documentation.

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -148,6 +148,9 @@
             <li<%= sidebar_current("docs-selectel-resource-craas-registry-v1") %>>
               <a href="/docs/providers/selectel/r/craas_registry_v1.html">selectel_craas_registry_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-resource-craas-token-v1") %>>
+              <a href="/docs/providers/selectel/r/craas_token_v1.html">selectel_craas_token_v1</a>
+            </li>
           </ul>
         </li>
 
