--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -94,6 +94,12 @@
             <li<%= sidebar_current("docs-selectel-resource-domains-record-v1") %>>
               <a href="/docs/providers/selectel/r/domains_record_v1.html">selectel_domains_record_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-resource-domains-zone-v2") %>>
+              <a href="/docs/providers/selectel/r/domains_zone_v2.html">selectel_domains_zone_v2</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-domains-rrset-v2") %>>
+              <a href="/docs/providers/selectel/r/domains_rrset_v2.html">selectel_domains_rrset_v2</a>
+            </li>
           </ul>
         </li>
 
