Add support for Global Router resources
Added datasources:
- selectel_global_router_quota_v1
- selectel_global_router_service_v1.go
- selectel_global_router_zone_group_v1.go
- selectel_global_router_zone_v1.go

Added resources:
- added selectel_global_router_vpc_network_v1
- added selectel_global_router_vpc_subnet_v1
- added selectel_global_router_dedicated_network_v1
- added selectel_global_router_dedicated_subnet_v1
- added selectel_global_router_router_v1
- added selectel_global_router_static_route_v1

* Add Dependency from Global Router API SDK —
  [globalrouter-go](https://github.com/selectel/globalrouter-go)
* Added docs for all datasources and resources above [TODO]

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -46,6 +46,18 @@
             <li<%= sidebar_current("docs-selectel-datasource-mks-kube-versions-v1") %>>
               <a href="/docs/providers/selectel/d/mks_kube_versions_v1.html">selectel_mks_kube_versions_v1</a>
             </li>
+            <li<%= sidebar_current("docs-selectel-datasource-global-router-quota-v1") %>>
+              <a href="/docs/providers/selectel/d/selectel_global_router_quota_v1.html">selectel_global_router_quota_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-datasource-global-router-service-v1") %>>
+              <a href="/docs/providers/selectel/d/selectel_global_router_service_v1.html">selectel_global_router_service_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-datasource-global-router-zone-group-v1") %>>
+              <a href="/docs/providers/selectel/d/selectel_global_router_zone_group_v1.html">selectel_global_router_zone_group_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-datasource-global-router-zone-v1") %>>
+              <a href="/docs/providers/selectel/d/selectel_global_router_zone_v1.html">selectel_global_router_zone_v1</a>
+            </li>
           </ul>
         </li>
 
@@ -168,6 +180,30 @@
             </li>
             <li<%= sidebar_current("docs-selectel-resource-craas-token-v1") %>>
               <a href="/docs/providers/selectel/r/craas_token_v1.html">selectel_craas_token_v1</a>
+            </li>
+          </ul>
+        </li>
+
+        <li<%= sidebar_current("docs-selectel-global-router") %>>
+          <a href="#">Global Router Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-selectel-resource-global-router-router-v1") %>>
+              <a href="/docs/providers/selectel/r/selectel_global_router_router_v1.html">selectel_global_router_router_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-global-router-vpc-network-v1") %>>
+              <a href="/docs/providers/selectel/r/selectel_global_router_vpc_network_v1.html">selectel_global_router_vpc_network_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-global-router-vpc-subnet-v1") %>>
+              <a href="/docs/providers/selectel/r/selectel_global_router_vpc_subnet_v1.html">selectel_global_router_vpc_subnet_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-global-router-dedicated-network-v1") %>>
+              <a href="/docs/providers/selectel/r/selectel_global_router_dedicated_network_v1.html">selectel_global_router_dedicated_network_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-global-router-dedicated-subnet-v1") %>>
+              <a href="/docs/providers/selectel/r/selectel_global_router_dedicated_subnet_v1.html">selectel_global_router_dedicated_subnet_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-resource-global-router-static-route-v1") %>>
+              <a href="/docs/providers/selectel/r/selectel_global_router_static_route_v1.html">selectel_global_router_static_route_v1</a>
             </li>
           </ul>
         </li>
