chore: update documetation

--- a/website/selectel.erb
+++ b/website/selectel.erb
@@ -208,6 +208,17 @@
           </ul>
         </li>
 
+        <li<%= sidebar_current("docs-selectel-private-dns") %>>
+          <a href="#">Private DNS Resources</a>
+          <ul class="nav nav-visible">
+            <li<%= sidebar_current("docs-selectel-private-dns-service-v1") %>>
+              <a href="/docs/providers/selectel/r/selectel_global_router_vpc_network_v1.html">selectel_private_dns_service_v1</a>
+            </li>
+            <li<%= sidebar_current("docs-selectel-private-dns-zone-v1") %>>
+              <a href="/docs/providers/selectel/r/private_dns_zone_v1.html">selectel_private_dns_zone_v1</a>
+            </li>
+          </ul>
+        </li>
       </ul>
     </div>
   <% end %>
